--- a/src/components/Lookitem/Lookitem.module.css
+++ b/src/components/Lookitem/Lookitem.module.css
@@ -3,13 +3,13 @@
 }
 .container{
     display: flex;
-    width: 100%;
     gap: 50px;
 
 }
 .img {
     width: calc(50%);  /* 圖片自適應寬度 */
-    height: auto;  /* 高度自動調整 */
+
+    aspect-ratio: 4/3;
 }
 .rightside{
     width: calc(50%);
@@ -23,9 +23,22 @@
   font-weight: 400;
 }
 .p{
-  margin: 24px 0px 48px 0px ;
+  margin: 24px 0px 24px 0px ;
   font-size: 1.25rem;
   font-weight: 300;
+}
+.div_love{
+  display: flex;
+  flex-direction: row;
+  margin: 0px 0px 24px 0px;
+}
+.love{
+  cursor: pointer;
+  margin-right: 12px;
+  user-select: none; /* 禁止選取 */
+  -webkit-user-select: none; /* 適用於 Safari */
+  -moz-user-select: none; /* 適用於 Firefox */
+  -ms-user-select: none; /* 適用於 IE/Edge */
 }
 .button{
   width: 100%;
@@ -42,7 +55,7 @@
 }
 
 
-@media (max-width: 800px) {
+@media (max-width:992px) {
   .container{
     display: flex;
     flex-direction: column;
