--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -72,14 +72,14 @@
   color: #545858;
 }
 .h3{
-  font-size: 1.125rem;
+  font-size: 18px;
 }
 
 
 .closeButton {
   background: none;
   border: none;
-  font-size: 1.125rem;
+  font-size: 18px;
   cursor: pointer;
 }
 
@@ -125,7 +125,7 @@
   margin-top:24px ;
   background-color: #9FA69E;
   color: #f5f5f5;
-  font-size: 0.875rem;
+  font-size: 16px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -140,7 +140,9 @@
   margin: 24px;
   color: #545858;
 }
-
+.h4{
+  font-size: 16px;
+}
 
 @media (max-width: 992px) {
   .cartimg{
@@ -164,7 +166,7 @@
     right: 0px;
     background: #f5f5f5;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 15px;
+    padding: 48px 15px;
     border-radius: 0px;
     z-index: 10;
     width: 100%;
